# INIEditor

./: .gitignore  CMakeLists.txt  README.md
docs/: classes.drawio  menuFlow.drawio
src/: INIEditor.cpp  INIEditor.h  UI.cpp  UI.h  main.cpp
srcbak/: INIEditor.cpp  INIEditor.h  Menu.h  UI.cpp  UI.h  main.cpp
test/: CMakeLists.txt  INIEditorTests.cpp  Skyrim_short.INI  Skyrim_short_spaces.INI  writeTest.INI
